# ExstreamCompassVectorLessRagAgent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  INSTALLATION.md  PRD.md  QUICKSTART.md  SIMPLE_SETUP.md  START_HERE.txt  alertmanager.yml  docker-compose.yml  prometheus.yml  prometheus_rules.yml  pyproject.toml  pytest.ini  render.yaml  render_deployment.md  requirements-render.txt  requirements.txt  setup.ps1  setup.sh
.audit_logs/: audit-2026-04-27.jsonl
.claude/: README.md  settings.json  settings.local.json
.claude/memory/: MEMORY.md  project_progress.md
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  OIDC_SETUP.md
docs/CloudNative/HTML/OpenText Exstream 22.2 - Web Client Online Help - English/: Default.htm  Default.mcwebhelp  Default_CSH.htm
frontend/: .gitignore  Dockerfile  README.md  UI_requirements.txt  index.html  package.json
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/components/: ChatInterface.module.css  ChatInterface.tsx  CitationsPanel.module.css  CitationsPanel.tsx  ReasoningTrail.module.css  ReasoningTrail.tsx  VariantSelector.module.css  VariantSelector.tsx
frontend/src/services/: api.ts
grafana/dashboards/: compass-overview.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
scripts/: run_evaluation.py
src/compass/: __init__.py  app.py  config.py  main.py
src/compass/agent/: __init__.py  agent.py  core_tools.py  state.py  tools.py  variant_isolation.py
src/compass/api/: gateway.py  oidc.py  routes.py
src/compass/indexer/: __init__.py  atomic.py  html_parser.py  index_tree.py  ocr.py  parser.py  pdf_parser.py  pdf_tables.py  search.py
src/compass/observability/: telemetry.py
src/compass/services/: __init__.py  audit.py  citations.py  session.py  vision.py
tests/: conftest.py  test_agent.py  test_app.py  test_atomic.py  test_audit.py  test_citations.py  test_core_tools.py  test_gateway.py  test_html_parser.py  test_index_tree.py  test_ocr.py  test_oidc.py  test_pdf_parser.py  test_pdf_tables.py  test_search.py  test_session.py  test_variant_isolation.py  test_vision.py
tests/evaluation/: README.md  __init__.py  conftest.py  harness.py  metrics.py  reporter.py  test_harness.py  test_queries.py
(+1158 files in other folders)
